ProFIT/objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the address of the attendee&apos;s company</description>
        <inlineHelpText>Choose the address of the attendee&apos;s company</inlineHelpText>
        <label>Address</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Displays the attendee&apos;s current company</description>
        <inlineHelpText>Enter the attendee&apos;s current company</inlineHelpText>
        <label>Company Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Displays the attendee&apos;s email</description>
        <inlineHelpText>Enter the attendee&apos;s email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Displays the attendee&apos;s phone number</description>
        <inlineHelpText>Enter the attendee&apos;s phone number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>